DROOLS-7337 Options and Configuration improvement